--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "serialize-javascript": ">=2.1.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.15.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.19.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "babel": {
     "presets": [
