--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "serialize-javascript": ">=2.1.1"
   },
