--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "react-dev": "webpack",
     "start": "nodemon ./server/index.js",
-    "heroku-postbuild": "cd client && npm install && npm run react-dev && npm start"
+    "heroku-postbuild": "cd client && npm install && npm run react-dev"
   },
   "keywords": [],
   "author": "",
